--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client", "google.accounts", "gapi", "gapi.client.sheets"],
+    "types": ["vite/client", "google.accounts", "gapi", "gapi.client.sheets", "gapi.client.drive-v3"],
     "noEmit": true,
     "isolatedModules": true
   }
