--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/gapi.client.drive-v3": "^0.0.1",
     "@types/gapi.client.sheets": "^4.0.20201031",
     "@types/google.accounts": "^0.0.7",
+    "solid-icons": "^1.0.9",
     "solid-js": "^1.6.10"
   }
 }
